samples/_failures_safe/1761478110_a186df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8827aa43.c: In function ‘main’:
./samples/SAFE/__tmp_8827aa43.c:155:16: error: missing terminating " character
  155 |         printf("%-12s
      |                ^~~~~~
./samples/SAFE/__tmp_8827aa43.c:155:9: error: expected expression at end of input
  155 |         printf("%-12s
      |         ^~~~~~
./samples/SAFE/__tmp_8827aa43.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8827aa43.c:155:9: error: expected declaration or statement at end of input
